# weko

./: .gitignore  CHANGELOG.md  CHANGELOG_ja.md  Dockerfile  README.md  docker-compose.arm64.yml  docker-compose.es-v7.yml  docker-compose.full.yml  docker-compose.sentinel.yml  docker-compose.withHandle.yml  docker-compose.yml  docker-compose2.yml  install.sh  install3.sh  packages.txt  test.py
modules/invenio-accounts/: requirements.txt  requirements2.txt  setup.cfg  tox.ini
modules/invenio-accounts/invenio_accounts/: admin.py  config.py  models.py  sessions.py  tasks.py  utils.py
modules/invenio-accounts/tests/: conftest.py  test_admin.py  test_models.py  test_sessions.py  test_tasks.py  test_utils.py
modules/invenio-communities/: pytest.ini  setup.py  tox.ini
modules/invenio-communities/examples/: app.py
modules/invenio-communities/invenio_communities/: __init__.py  admin.py  cli.py  config.py  errors.py  ext.py  forms.py  links.py  models.py  permissions.py  proxies.py  receivers.py  signals.py  tasks.py  utils.py  version.py  webpack.py
modules/invenio-communities/tests/: conftest.py  test_admin.py  (+8 more)
modules/invenio-db/: requirements.txt  tox.ini
modules/invenio-deposit/: babel.ini  coverage.xml  requirements2.txt  tox.ini
modules/invenio-files-rest/: setup.cfg  setup.py
modules/invenio-files-rest/invenio_files_rest/: admin.py  config.py  errors.py  models.py  utils.py  views.py
modules/invenio-files-rest/invenio_files_rest/storage/: base.py  pyfs.py
modules/invenio-files-rest/invenio_files_rest/translations/: messages.pot
modules/invenio-files-rest/invenio_files_rest/translations/ja/LC_MESSAGES/: messages.po
modules/invenio-files-rest/tests/: conftest.py  test_admin.py  test_models.py  test_views_objectversion.py
modules/invenio-iiif/: coverage.xml  pytest.ini  requirements2.txt  tox.ini
modules/invenio-indexer/: requirements2.txt  tox.ini
modules/invenio-mail/: setup.cfg  setup.py  tox.ini
modules/invenio-oaiharvester/: requirements2.txt  tox.ini
modules/invenio-oaiserver/: requirements2.txt  tox.ini
modules/invenio-previewer/: requirements2.txt  tox.ini
modules/invenio-queues/: requirements2.txt  tox.ini
modules/invenio-records/: tox.ini
modules/invenio-records-rest/: requirements2.txt  tox.ini
modules/invenio-resourcesyncclient/: coverage.xml  requirements.txt  tox.ini
modules/invenio-resourcesyncserver/: coverage.xml  requirements2.txt  tox.ini
modules/invenio-s3/: coverage.xml  requirements2.txt
modules/invenio-stats/: coverage.xml  requirements2.txt  tox.ini
modules/weko-accounts/: coverage.xml  requirements2.txt  setup.py  tox.ini
modules/weko-admin/: setup.py  tox.ini
modules/weko-authors/: setup.py  tox.ini
modules/weko-bulkupdate/: coverage.xml  requirements.txt
modules/weko-deposit/: coverage.xml  requirements2.txt  tox.ini
modules/weko-gridlayout/: coverage.xml  setup.py
modules/weko-groups/: coverage.xml
modules/weko-handle/: coverage.xml  requirements2.txt  setup.py
modules/weko-index-tree/: coverage.xml  requirements2.txt  setup.py  tox.ini
modules/weko-indextree-journal/: requirements2.txt
modules/weko-items-autofill/: coverage.xml  requirements2.txt
modules/weko-items-ui/: requirements.txt  run_tests1028.sh  setup.py  tox.ini
modules/weko-itemtypes-ui/: coverage.xml
modules/weko-logging/: coverage.xml  setup.py
modules/weko-notifications/: setup.py
modules/weko-plugins/: coverage.xml  requirements.txt  requirements2.txt
modules/weko-records/: coverage.xml  setup.py
modules/weko-records-ui/: requirements2.txt  setup.py  tox.ini
modules/weko-schema-ui/: requirements2.txt
modules/weko-search-ui/: requirements2.txt  setup.py
modules/weko-signposting/: setup.py
modules/weko-sitemap/: coverage.xml  requirements.txt  requirements2.txt  tox.ini
modules/weko-swordserver/: coverage.xml  requirements2.txt  setup.py  tox.ini
modules/weko-theme/: coverage.xml  setup.py  tox.ini
modules/weko-user-profiles/: coverage.xml  requirements2.txt
modules/weko-workflow/: requirements2.txt  setup.py
modules/weko-workspace/: setup.py
nginx/: Dockerfile  Dockerfile.ams  Dockerfile.arm64  ecosystem.config.js  login.php  login.py  startup.sh  weko.conf
opensearch/: Dockerfile
pgpool/: Dockerfile  entrypoint.sh
postgresql/ddl/: W2025-29.sql
scripts/: create-instance2.sh  instance.cfg  migration.sql  populate-instance.sh  provision-web.sh  supervisord.conf  supervisord_worker.conf
scripts/demo/: addjpcoar_v2_mapping.py  fix_lang_code_column.sql  fix_metadata_53602.py  register_item_types.py  resticted_access.sql  restricted_mail_template.sql  search_management_update.sql  update_W2025-29.py  update_item_type.py  update_itemtype_full.py  update_itemtype_multiple.py  update_search_management.sh
scripts/tests/: conftest.py  test_fix_metadata_53602.py
test/radon/: cc_result.txt  cc_result2.txt
test/tavern/: create_item_type_template.py  docker-compose.yml  pytest.ini  tavern.Dockerfile
tools/: add_root_file_id.py  deleteItem.py  disable_restricted_access.sh  jc_stats.py  oaisetutil.py  reindex_all_index.py  reindex_es7_to_os.py  replace_db_fqdn.py  replace_es_fqdn.py  restricted_upadate.sh  updateRestrictedRecords.py  update_restricted_access_property.py  update_template_and_policies.py  update_v1.0.8_v2.0.0.sh  update_weko_links.py  verify_restricted_records.py  verify_restricted_update.sh
tools/update/: addjpcoar_v1_mapping.py  fix_elasticsearch_aliases.py  fix_elasticsearch_deleted_item_path.py  migrate_item_type_mapping.py  replace_indexpath.py  replace_search_condition.py  test_replace_search_condition.py
(+988 files in other folders)
