# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2022 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-files-rest
version = attr: invenio_files_rest.__version__
description = "Files download/upload REST API similar to S3 for Invenio."
long_description = file: README.rst, CHANGES.rst
keywords = invenio files REST
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-files-rest
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 5 - Production/Stable


[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    click-default-group>=1.2.2,<2.0.0
    invenio-accounts>=1.4.10
    invenio-i18n>=2.0.0
    Flask-CeleryExt>=0.3.1
    Flask-Login>=0.3.2
    Flask-WTF>=0.13.1
    Flask>=0.11.1
    fs>=0.5.4,<2.0
    invenio-rest[cors]>=1.1.0
    simplejson>=3.0.0
    SQLAlchemy-Utils>=0.31.0
    WTForms>=2.0
setup_requires =
    pytest-runner>=2.7
    Babel>=1.3


[options.extras_require]

docs =
    sphinx>=4.5.0
    sphinxcontrib-httpdomain>=1.4.0

postgresql =
    invenio-db[postgresql]>=1.0.0

mysql =
    invenio-db[mysql]>=1.0.0

sqlite =
    invenio-db>=1.0.0

tests =
    pytest-black>=0.3.0
    future>=0.18.2
    invenio-access>=1.4.0
    invenio-admin>=1.3.2
    invenio-db[postgresql,mysql,versioning]>=1.0.13,<2.0
    pytest-cache
    pytest-invenio>=1.4.7
    sphinx>=4.5.0
    sphinxcontrib-httpdomain>=1.4.0
    responses
    coverage>=4.5.3,<5.0.0
    mock>=3.0.0,<4.0.0
    pytest>=4.6.4,<5.0.0
    pytest-cov
    pytest-pep8

all =
    sphinx>=4.5.0
    sphinxcontrib-httpdomain>=1.4.0
    coverage>=4.5.3,<5.0.0
    mock>=3.0.0,<4.0.0
    pytest>=4.6.4,<5.0.0
    pytest-cache
    pytest-cov
    pytest-pep8
    pytest-invenio
    responses

[options.entry_points]
invenio_access.actions =
    # Location related permissions
    location_update_all = invenio_files_rest.permissions:location_update_all
    # Bucket related permissions.
    bucket_read_all = invenio_files_rest.permissions:bucket_read_all
    bucket_read_versions_all = invenio_files_rest.permissions:bucket_read_versions_all
    bucket_update_all = invenio_files_rest.permissions:bucket_update_all
    bucket_listmultiparts_all = invenio_files_rest.permissions:bucket_listmultiparts_all
    # Object related permissions.
    object_read_all = invenio_files_rest.permissions:object_read_all
    object_read_version_all = invenio_files_rest.permissions:object_read_version_all
    object_delete_all = invenio_files_rest.permissions:object_delete_all
    object_delete_version_all = invenio_files_rest.permissions:object_delete_version_all
    # Multipart related permissions.
    multipart_read_all = invenio_files_rest.permissions:multipart_read_all
    multipart_delete_all = invenio_files_rest.permissions:multipart_delete_all
invenio_admin.views =
    location_adminview = invenio_files_rest.admin:location_adminview
    bucket_adminview = invenio_files_rest.admin:bucket_adminview
    object_adminview = invenio_files_rest.admin:object_adminview
    fileinstance_adminview = invenio_files_rest.admin:fileinstance_adminview
    multipartobject_adminview = invenio_files_rest.admin:multipartobject_adminview
invenio_base.api_apps =
    invenio_files_rest = invenio_files_rest:InvenioFilesREST
invenio_base.api_blueprints =
    invenio_files_rest = invenio_files_rest.views:blueprint
invenio_base.apps =
    invenio_files_rest = invenio_files_rest:InvenioFilesREST
invenio_celery.tasks =
    invenio_files_rest = invenio_files_rest.tasks
invenio_db.alembic =
    invenio_files_rest = invenio_files_rest:alembic
invenio_db.models =
    invenio_files_rest = invenio_files_rest.models
invenio_i18n.translations =
    messages = invenio_files_rest



[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_files_rest/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_files_rest/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_files_rest/translations/messages.pot
output-dir = invenio_files_rest/translations/

[update_catalog]
input-file = invenio_files_rest/translations/messages.pot
output-dir = invenio_files_rest/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

# [tool:pytest]
# addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_files_rest --cov-report=term-missing
# filterwarnings = ignore::pytest.PytestDeprecationWarning
# testpaths = tests invenio_files_rest
